# arlo-4a-pa

./: .gitignore  README.md  docker-compose.yml
api/: .gitignore  Cargo.toml  Dockerfile  fdp.html
api/src/: main.rs
api/src/database/: database_error.rs  init.rs  mod.rs
api/src/database/entity/: friend_list_entity.rs  game_entity.rs  games_entity.rs  mod.rs  ranking_entity.rs  ranking_game_user_entity.rs  session_entity.rs  user_entity.rs
api/src/database/mapper/: game_entity_mapper.rs  games_entity_mapper.rs  mod.rs  ranking_by_game_entity_mapper.rs  ranking_entity_mapper.rs  session_entity_mapper.rs  user_entity_mapper.rs
api/src/database/repository/: friend_list_repository.rs  game_repository.rs  games_repository.rs  mod.rs  ranking_repository.rs  session_repository.rs  user_repository.rs
api/src/domain/: error.rs
api/src/domain/model/: game.rs  games.rs  mod.rs  ranking.rs  ranking_by_game.rs  session.rs  user.rs
api/src/entrypoint/: mod.rs  user.rs
api/src/entrypoint/admin/: admin_router.rs
api/src/entrypoint/command/: create_user_command.rs  login_command.rs  mod.rs
api/src/entrypoint/friend_list/: friend_list_router.rs  mod.rs
api/src/entrypoint/game/: game_router.rs
api/src/entrypoint/games/: games_router.rs  mod.rs
api/src/entrypoint/middleware/: is_logged.rs  mod.rs
api/src/entrypoint/ranking/: mod.rs  ranking_router.rs
api/src/entrypoint/request/: mod.rs
api/src/entrypoint/user/: mod.rs  user_entry_point.rs  user_router.rs
api/src/middlewares/: cors_layer.rs  mod.rs  swagger_security.rs  tracing.rs
api/src/service/: friend_list_service.rs  game_service.rs  games_service.rs  mod.rs  ranking_service.rs  session_service.rs  user.rs  user_service.rs
api/src/service/command/: change_password_command.rs  create_game_command.rs  create_user_command.rs  login_command.rs  mod.rs  updata_user_command.rs  update_pseudo_command.rs  update_user_command.rs
api_game/: Cargo.toml  Dockerfile
api_game/src/: main.rs
api_game/src/database/: mod.rs
api_game/src/database/entity/: game.rs  lobby.rs  lobby_member.rs  mod.rs
api_game/src/database/mapper/: lobby_entity_mapper.rs  mod.rs  session_entity_mapper.rs
api_game/src/database/repository/: game_repository.rs  lobby_member_repository.rs  lobby_repository.rs  mod.rs  session_repository.rs
api_game/src/domain/model/: game.rs  lobby.rs  lobby_member.rs  mod.rs  session.rs
api_game/src/entrypoint/: mod.rs
api_game/src/entrypoint/lobby/: lobby_router.rs  mod.rs
api_game/src/entrypoint/middleware/: is_host.rs  mod.rs
api_game/src/service/: lobby_service.rs  mod.rs  session_service.rs
api_game/src/service/command/: mod.rs
docker-manager/: .gitignore  Cargo.toml  Dockerfile  README.md  requirements.txt
docker-manager/dockerfiles/: Dockerfile.c  Dockerfile.java  Dockerfile.python  Dockerfile.python3  Dockerfile.rust  Dockerfile.test
docker-manager/dockerfiles/configs/: Cargo.toml  pom.xml
docker-manager/dockerfiles/games/: morpion.py
docker-manager/dockerfiles/test/: Dockerfile
docker-manager/src/: main.py  main.rs
docker-manager/src-old/: main.rs
docker-manager/src-old/domain/: error.rs
docker-manager/src-old/entrypoint/: mod.rs
docker-manager/src-old/entrypoint/docker_container/: mod.rs
docker-manager/src-old/entrypoint/docker_image/: docker_image_router.rs  mod.rs
docker-manager/src-old/middlewares/: mod.rs
docker-manager/src-old/service/: docker_image_service.rs  mod.rs
docker-manager/src/dependencies/: docker.py
docker-manager/src/domain/: error.rs
docker-manager/src/entrypoint/docker_image/: mod.rs
docker-manager/src/middlewares/: swagger_security.rs  tracing.rs
docker-manager/src/model/: __init__.py  docker_container_models.py  docker_image_models.py
docker-manager/src/routers/: docker_container.py  docker_images.py
docker-manager/src/service/: docker_container_service.py  docker_image_service.py  docker_image_service.rs  mod.rs
docker-manager/src/service/command/: build_image_command.rs  mod.rs
game-manager/: Cargo.toml  Dockerfile  package-lock.json
game-manager/assets/: script.js
game-manager/src/: client.rs  main.rs
game-manager/src/database/entity/: game.rs  game_history.rs  game_members_history.rs  game_move_history.rs  invite.rs  lobby.rs  lobby_member.rs  mod.rs  user.rs  ws_session.rs
game-manager/src/database/mapper/: friend_list_entity_mapper.rs  game_entity_mapper.rs  game_history_mapper.rs  game_members_history_mapper.rs  game_move_history_mapper.rs  invite_entity_mapper.rs  lobby_entity_mapper.rs  lobby_member_mapper.rs  mod.rs  user_entity_mapper.rs  ws_session_entity_mapper.rs
game-manager/src/database/repository/: friend_list_repository.rs  game_history_repository.rs  game_members_history_repository.rs  game_move_history_repository.rs  game_repository.rs  invite_repository.rs  lobby_member_repository.rs  lobby_repository.rs  mod.rs  user_repository.rs  ws_session_repository.rs
game-manager/src/domain/: error.rs
game-manager/src/domain/model/: friend_list.rs  game.rs  game_history.rs  game_members_history.rs  game_move_history.rs  invite.rs  lobby.rs  lobby_member.rs  mod.rs  session.rs  user.rs  ws_session.rs
game-manager/src/entrypoint/: mod.rs
game-manager/src/entrypoint/game/: game_router.rs  mod.rs
game-manager/src/entrypoint/history/: history_router.rs  mod.rs
game-manager/src/entrypoint/lobby/: lobby_router.rs  mod.rs
game-manager/src/entrypoint/middleware/: is_logged.rs  is_logged_admin.rs  is_logged_url.rs  mod.rs
game-manager/src/entrypoint/websocket/: connections.rs  get_connected_friends.rs  mod.rs  router.rs
game-manager/src/service/: docker_manager_service.rs  friend_list_service.rs  game_history_service.rs  game_members_history_service.rs  game_move_history_service.rs  game_service.rs  invite_service.rs  lobby_service.rs  mod.rs  session_service.rs  user_service.rs  ws_session_service.rs
sockets-service/: Cargo.toml
sockets-service/src/: handler.rs  ws.rs
websocketspoc/: Cargo.toml
websocketspoc/src/: main.rs
websocketspoc/src/service/: mod.rs  session_service.rs
(+401 files in other folders)
