[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
dotenv = "0.15.0"
bb8 = "0.7.1"
bb8-postgres = "0.7.0"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1.68"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.14.0"