[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
dotenv = "0.15.0"
bb8 = "0.7.1"
bb8-postgres = "0.7.0"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7.2"
tokio-stream = { version = "0.1.12"     }
futures-util = "0.3.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1.68"
serde_json = "1.0"
json = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.14.0"
rand = "0.8.5"
utoipa = { version = "3.2.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3", features = ["axum"] }
regex = "1.8.1"