[package]
name = "api"
version = "0.1.12"
edition = "2021"
publish = false
authors=["Sid Bennaceur","Arnaud Jourdain","Jonathan Fuentes","Armand Dailly"]
rust-version="1.64.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
axum = "0.6.12"
axum-server = { version = "0.4.7", features = ["tls-rustls"] }
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
bcrypt = "0.14.0"
dotenv = "0.15.0"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
rand = "0.8.5"
regex = "1.8.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7.2"
tower-http = { version = "0.4.0", features = ["cors"]}
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "3.2.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3", features = ["axum"] }