[package]
name = "game-manager"
version = "0.1.8"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
axum = {version = "0.6.12", features = ["ws", "headers"]}
chrono = "0.4.24"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
tokio-postgres = "0.7.2"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
rand = "0.8.5"
dotenv = "0.15.0"
colored = "2.0.0"
