[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
dotenv = "0.15.0"
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1.12"
tokio-postgres = "0.7.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1.68"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.14.0"
rand = "0.8.5"
utoipa = { version = "3.2.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3", features = ["axum"] }
warp = "0.3.4"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
futures = "0.3.28"