[package]
name = "websockets-service"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
axum = "0.6.12"
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
bcrypt = "0.14.0"
dotenv = "0.15.0"
futures = "0.3.28"
rand = "0.8.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1.12"
tokio-postgres = "0.7.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "3.2.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3", features = ["axum"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
warp = "0.3.4"
